added image and header

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>GoGoPlace</title>
 </head>
 <body>
-    <h1>This is the landing page</h1>
+    <div id="main">
+    
+        <img id="background-img" src="images/background.jpg"/>
+        <div id="content-container">
+            <div id="head-container">
+                <h1> Lets go places </h1>
+            </div>
+        </div>    
+        
+    </div>
 </body>
 </html>
