fixed image to be independent and load from an external website

--- a/client/index.html
+++ b/client/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>GoGoPlace</title>
 </head>
-<body>
+<body>https://unsplash.com/photos/EX3gFC6eP4c/
     <div id="main">
     
-        <img id="background-img" src="images/background.jpg"/>
+        <img id="background-img" src="https://images.unsplash.com/photo-1547989453-11e67ffb3885?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"/>
         <div id="content-container">
             <div id="head-container">
                 <h1> Lets go places </h1>
