--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,24 @@
     <title>GoGoPlace</title>
 </head>
 <body>
+    <nav>
+        <div id="nav-bttn">
+            <div id="nav-bar-1"></div>
+            <div id="nav-bar-2"></div>
+            <div id="nav-bar-3" class="nav-bar-3"></div>
+        </div>
+        <div id="nav-container" class="nav-container">
+            <a class="icon-link" href="https://tj-dev-mtn.herokuapp.com">
+                <img class="nav-icon" href="" src="https://cdn-icons-png.flaticon.com/512/845/845022.png">
+            </a>
+            <a href="https://tj-dev-mtn.herokuapp.com">About</a>
+        </div>
+    </nav>
     <div id="main">
-    
-        <img id="background-img" src="https://images.unsplash.com/photo-1547989453-11e67ffb3885?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"/>
+        
+        <img id="background-img" src="https://unsplash.com/photos/EX3gFC6eP4c/download?force=true&w=2400"/>
+        <!-- <img id="background-img" src="images/background.jpg"/> -->
+
         <div id="content-container">
             <div id="head-container">
                 <h1> Lets go places </h1>
