updated and added axios functionality for the front end, and some rollbar on the backend

--- a/client/index.html
+++ b/client/index.html
@@ -31,8 +31,11 @@
                 <h1> Lets go places </h1>
             </div>
         </div>    
-        
+        <div>
+            <button id="test-bttn">garbage</button>
+        </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="/js"></script>
 </body>
 </html>
