--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,8 @@
         </div>    
         <div>
             <button id="test-bttn">garbage</button>
+            <button id="testBoy">warning</button>
+            <button id="crit">critical</button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
